--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <form>
                   <div class="form-group">
                     <label for="exampleFormControlFile1" class="lab-color"><span class="input-group-text input-txt" id="basic-addon1">Preço</span></label>
-                    <input type="number" class="form-control-file input" id="id_preco">
+                    <input type="text" class="form-control-file input" id="id_preco">
                   </div>
                 </form>
              
@@ -69,13 +69,13 @@
                 <td>Preço</td>
               </tr>
 
-              <tr>
+              <!-- <tr>
                 <td>Nome</td>
                 <td>Desc.</td>
                 <td>Preço</td>
                 <td><button class="btn2"><i class="fa-solid fa-trash-can"></i></button></td>
                 <td><button class="btn2"><i class="fa-solid fa-pencil"></i></button></td>
-              </tr>
+              </tr> -->
                 
             </tbody>    
           </table>        
